fix some sonar issues